1998-06-24  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* CompleteProbeMap.m, CompleteVarMap.m, CustomProbeMap.m,
	DefaultProbeMap.m, Probe.m, ProbeMap.m, VarProbe.m:  Use
	[Warning raiseEvent: ..] instead of fprintf.

	* Makefile.am (lib_LIBRARIES, libobjectbase_a_SOURCES): Remove.
	(noinst_HEADERS): Include local.h.

1998-06-23  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am (lib_LTLIBRARIES, libobjectbase_la_SOURCES,
	libobjectbase_la_LDFLAGS, SRC, CURRENT, REVISION, AGE): New
	variables.  Set *_SOURCES from SRC.

1998-06-22  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile: Remove.
	
1998-06-21  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am: New file.

1998-06-17  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* objectbase.h: Document Swarm.

1998-06-03  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* objectbase.h: Update documentation tags.

1998-05-28  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* objectbase.h: Include defobj.h.

	* Probe.m: Include collections.h.

	* ActivityControl.[hm]: Include activity.h.

1998-05-09  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* MessageProbe.m: #include avcall.h and ffi.h, not #import.

1998-05-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Arguments.m ([Arguments -parseKey:arg:]): Send messages to
	self, not arguments.

1998-05-06  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* EmptyProbeMap.[hm]: Remove do-nothing -createEnd.

	* objectbase.h: Spacing changes in method declarations throughout.
	(ProbeConfig, DefaultProbeMap): Add description string.
	(CompleteProbeMap): Add phase tags.
	(EmptyProbeMap): Remove -createEnd.
	(CompleteVarMap): Add //S.

	* CustomProbeMap.m: Add phase tags.
	
	* CustomProbeMap.[hm]: Reformatting throughout.

1998-04-29  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile (version.h): Extract SWARM_{MAJOR,MINOR,SUBMINOR} from
	version file.

	* Arguments.m (SIGNATURE_FILE): New symbol for filename that has
	version information.